@@ -30,3 +30,6 @@ Robert 'phaylon' Sedlacek
 
 Stephen 'Stennie' Steneker
 	- Spelling corrections.
+
+Chocolateboy
+	- Advice on $^H, %^H, and other dark and terrible magicks.
